fix double borders appearing in layer tree items while no progress bar is visible

--- a/src/main/js/bundles/dn_tocapi/css/styles.css
+++ b/src/main/js/bundles/dn_tocapi/css/styles.css
@@ -46,6 +46,10 @@
     padding-left: 34px;
 }
 
+.ctAppRoot .vue-toc__layer-tree .v-progress-linear{
+    position: absolute
+}
+
 .ctAppRoot .vue-base .v-list__group__header .v-list__group__header__prepend-icon{
     min-width: 30px;
 }
